--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 Library/
 ProjectSettings/
 Temp/
+.vs/bp_demo/v15/.suo
+.vs/bp_demo/v15/Server/sqlite3/db.lock
+.vs/bp_demo/v15/Server/sqlite3/storage.ide
+.vs/bp_demo/v15/Server/sqlite3/storage.ide-shm
+.vs/bp_demo/v15/Server/sqlite3/storage.ide-wal
+Assembly-CSharp.csproj
+bp_demo.sln
+obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+*.cache
